UPDATE: Continuing to remove Bootstrap

--- a/app/javascript/davechmura_website/stylesheets/_mixins.sass
+++ b/app/javascript/davechmura_website/stylesheets/_mixins.sass
@@ -58,13 +58,13 @@
     color: $background
     background-color: $color
 
-// Background Cover Mixin
-
-=background-cover
-  -webkit-background-size: cover
-  -moz-background-size: cover
-  background-size: cover
-  -o-background-size: cover
+// // Background Cover Mixin
+//
+// =background-cover
+//   -webkit-background-size: cover
+//   -moz-background-size: cover
+//   background-size: cover
+//   -o-background-size: cover
 
 // Font Mixins
 
