--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -5,7 +5,8 @@
   .mast-header-text
     .intro-lead-in Chief Instigator, passionate developer, mentor.
     .intro-heading Let's work together!
-    %a.page-scroll.btn.btn-xl{:href => "#skills"} Tell Me More
+    .intro-call-to-action
+      %a.page-scroll{:href => "#skills"} Tell Me More
 
 = render 'intro_text'
 = render 'skills'
