--- a/app/views/resume/index.html.haml
+++ b/app/views/resume/index.html.haml
@@ -1,11 +1,6 @@
 
-:css
-  #mainNav{
-    /* display: none; */
-
-    }
 .resume-header
-  .resume-contact.text-center
+  .resume-contact
     .resume-name
       %h2= link_to('David Chmura', root_path)
     .resume-phone
@@ -36,7 +31,7 @@
   .resume-skills
     = render 'skills'
 
-.resume.d-flex
+.resume
 
   .resume-sidebar
     -# .resume-experience-sidebar
