--- a/app/javascript/davechmura_website/stylesheets/agency.sass
+++ b/app/javascript/davechmura_website/stylesheets/agency.sass
@@ -1,7 +1,6 @@
 @tailwind preflight
 @tailwind components
 @tailwind utilities
-
 // Background Cover Mixin
 
 =background-cover
@@ -14,37 +13,53 @@
 @import 'mixins'
 
 .intro-call-to-action
+  @apply mt-6
   a
     @apply px-4 py-2 rounded bg-yellow-dark text-2xl text-white
 
-section
-  @apply w-full border-b mb-3
-  h2
-    @apply text-grey-darker
-
-.skills
-  .section-head
-    @apply text-grey-darker text-3xl
-    p
-      @apply text-2xl text-grey-darker
+.intro-text
+  @apply bg-blue-lightest
+  p
+    @apply my-4 text-3xl
+// section
+//   @apply border-b mb-3
+//   h2
+//     @apply text-grey-darker
 
 // Skills Section
-.skill-item
-  @apply w-full px-3 text-lg text-grey-darker
-  @screen sm
-    @apply w-1/2
-  @screen md
-    @apply w-1/3 text-xl
+.skills
+.section-head
+  @apply text-grey-darkest text-3xl my-4 text-center
+  p
+    @apply text-2xl
 
+.skill-items
+  @apply flex flex-wrap  content-center self-center justify-between
+
+  .skill-item
+    @apply text-base text-grey-darker text-center w-full bg-blue-lighter p-2 border border-indigo rounded
+
+  @screen sm
+    @apply bg-green
+    .skill-item
+      @apply w-1/2 text-base
+
+  @screen md
+    @apply bg-green-lighter
+    .skill-item
+      @apply w-1/3  text-base text-xl
+
+  @screen lg
+    @apply bg-blue-light
+    .skill-item
+      @apply w-1/3
 
 // END Skills Section
 .text-muted
-  @apply text-grey-light
+  @apply text-grey
 
 .text-primary
   color: $theme-primary !important
-
-
 
 .intro-text
   @apply text-xl text-grey-darkest
@@ -54,60 +69,40 @@ section
   background-repeat: no-repeat
   background-attachment: scroll
   background-position: center center
-  margin: 0
-
   +background-cover
-
-  text-align: center
-  color: white
+  @apply text-center
 
   .mast-header-text
     margin: 3rem
     padding: 5rem
     color: #2a5278
 
-    .intro-lead-in
-      +serif-font
-      +transparent(0.7, 7)
+.intro-lead-in
+  @apply font-sans text-5xl  bg-green-light leading-loose
 
-      font-style: italic
-      font-size: 22px
-      line-height: 22px
-
-    .intro-heading
-      +heading-font
-      +transparent(0.8, 8)
-
-      font-weight: 700
-      font-size: 50px
-      line-height: 50px
-      margin-bottom: 25px
-
-@media (min-width: 768px)
-  .mast-header
-    .mast-header-text
-      @apply pt-24
-      // padding-top: 300px
-      // padding-bottom: 200px
-
-      .intro-lead-in
-        +serif-font
-
-        font-style: italic
-        font-size: 40px
-        line-height: 40px
-        margin-bottom: 25px
-
-      .intro-heading
-        +heading-font
-
-        font-weight: 700
-        font-size: 75px
-        line-height: 75px
-        margin-bottom: 50px
+.intro-heading
+  @apply font-serif text-4xl italic leading-loose
+  // @apply text-2xl italic
 
 
 
-
-.btn:focus, .btn:active, .btn.active, .btn:active:focus
-  outline: none
+//
+// @media (min-width: 768px)
+//   .mast-header
+//     .mast-header-text
+//       @apply pt-24
+//       // padding-top: 300px
+//       // padding-bottom: 200px
+//
+//       .intro-lead-in
+//         font-style: italic
+//         font-size: 40px
+//         line-height: 40px
+//         margin-bottom: 25px
+//
+//       .intro-heading
+//         @apply font-sans
+//         font-weight: 700
+//         font-size: 75px
+//         line-height: 75px
+//         margin-bottom: 50px
