--- a/app/views/pages/_team.html.haml
+++ b/app/views/pages/_team.html.haml
@@ -1,7 +1,8 @@
-%section
-  .w-full.text-center
+
+%section#team
+  .section-head
     %h2 Roles I play
-    %h3.section-subheading.text-muted These are some of the roles I play.
+    %h3.section-subheading These are some of the roles I play.
   .flex.flex-row
     .p-2{:class => "w-1/3 text-center"}
       = image_tag((asset_pack_path'davechmura_website/images/DavePics/davechmura_aboutme.png'), alt: 'Dave Chmura holding a gaggle of Apple Puck Mice', class: ' rounded-full')
