--- a/app/views/resume/_activities.html.haml
+++ b/app/views/resume/_activities.html.haml
@@ -1,6 +1,15 @@
 %h2 Activities
 %ul
-  %li.fas-fa SKIING
-  %li.fas-fa PLAYING GUITAR - WRITING THE OCCASIONAL SONG
-  %li.fas-fa HANGING WITH AND TRAINING OUR PETS
-  %li.fas-fa VOLUNTEERING
+  %li
+    %i.fas.fa-skiing
+    SKIING
+  %li
+    %i.fas.fa-guitar
+    PLAYING GUITAR - WRITING THE OCCASIONAL SONG
+  %li
+    %i.fas.fa-dog
+    HANGING WITH AND TRAINING OUR PETS
+    %i.fas.fa-cat
+  %li
+    %i.fas.fa-hands-helping
+    VOLUNTEERING
