UPDATE: Resume styles

--- a/app/views/resume/index.html.haml
+++ b/app/views/resume/index.html.haml
@@ -84,7 +84,7 @@
             19 week intensive training in full stack web application development. Chicago, IL
 
   .resume-experience-section
-    %h2 Experience
+    %h2.mb-3.text-3xl.text-grey-darkest Employment
     %h2.resume-employer University of Michigan, College of Literature, Science and the Arts
     %h2.resume-job Systems Architect Intermediate, LSA MIS
     .resume-employment-dates September 2015 - Present
