--- a/app/javascript/davechmura_website/stylesheets/resume.sass
+++ b/app/javascript/davechmura_website/stylesheets/resume.sass
@@ -59,9 +59,7 @@
   color: #FFFFFF
 
 .resume
-  // @include outer-container(100%)
-  // display: fle
-  @apply 
+  @apply
 
 .resume-button
   width: 60%
@@ -69,7 +67,6 @@
   left: 20%
 
 .resume-masthead
-
   h2
     @apply text-2xl
 
@@ -110,20 +107,21 @@
   margin-right: 1rem
 
 .resume-experience-section
-  font-size: $fontsize
   // @include make-col(9)
-  @apply m-2 text-base w-auto
+  @apply p-4 text-base w-5/6 max-w-xl
+  h2
+    
   .resume-job-experiences
 
-    position: relative
-    left: 3%
+    // position: relative
+    // left: 3%
     li
       line-height: 1.3rem
       clear: left
       list-style-type: circle
 
 .resume-sidebar
-  @apply w-1/3 mt-3 mr-2
+  @apply w-1/3 mr-2 my-3
   p
     @apply text-base
   h3
@@ -133,7 +131,7 @@
   li
     @apply list-reset
   .resume-experience-sidebar
-    @apply  bg-blue-light rounded-lg p-2
+    @apply  bg-blue-light rounded-lg p-1 pb-6
     h3
       @apply text-grey-darkest
     li
@@ -143,17 +141,17 @@
 
   .resume-a-bit-about-me-sidebar
     // background-color: #79A092
-    @apply bg-blue-lighter p-3
+    @apply bg-blue-lighter p-3 pb-6 -mt-2 rounded-lg
 
   .resume-education-sidebar
     // background-color: #607B9B
-    @apply bg-blue-darkest text-white p-2 rounded-lg
+    @apply bg-blue-darkest text-white rounded-lg -mt-4 pb-2
     h3
       @apply text-grey-light
     h4
-      @apply text-xl
+      @apply text-base
     .degree
-      @apply ml-2 mb-4 text-base text-blue-lighter
+      @apply ml-1 mb-4 text-base text-blue-lighter
 
 
 .field-circle
