--- a/app/javascript/davechmura_website/stylesheets/resume.sass
+++ b/app/javascript/davechmura_website/stylesheets/resume.sass
@@ -77,7 +77,7 @@
     @apply list-reset
 
 .resume-summary
-  @apply bg-blue-light p-1 text-base
+  @apply bg-blue-lighter p-1 text-base 
 
 .resume-skills
   // @include make-col(12)
@@ -110,7 +110,7 @@
   // @include make-col(9)
   @apply p-4 text-base w-5/6 max-w-xl
   h2
-    
+
   .resume-job-experiences
 
     // position: relative
