--- a/app/views/resume/_activities.html.haml
+++ b/app/views/resume/_activities.html.haml
@@ -2,14 +2,14 @@
 %ul
   %li
     %i.fas.fa-skiing
-    SKIING
+    Skiing
   %li
     %i.fas.fa-guitar
-    PLAYING GUITAR - WRITING THE OCCASIONAL SONG
+    Playing guitar - writing the occasional song
   %li
     %i.fas.fa-dog
-    HANGING WITH AND TRAINING OUR PETS
+    Hanging with and training our pets
     %i.fas.fa-cat
   %li
     %i.fas.fa-hands-helping
-    VOLUNTEERING
+    Volunteering
