--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -16,7 +16,7 @@
     = link_to 'Contact Me', contact_path
     = link_to 'Blog', posts_path
     = link_to 'About', about_path
-
+    = link_to 'Resume', resume_path
 
     -# = link_to "Privacy", privacy_path
 
