--- a/app/javascript/davechmura_website/stylesheets/resume.sass
+++ b/app/javascript/davechmura_website/stylesheets/resume.sass
@@ -59,19 +59,15 @@
   @apply bg-green-lightest p-2 text-base
 
 .resume-job
-  font-size: $fontsize
-  line-height: 1rem
-  // @include margin( 1rem null null null)
+  @apply text-base my-2 text-blue-dark -mb-1
 
 .resume-employment-dates
-  @apply invisible
-  font-style: oblique
-  font-weight: bold
+  @apply invisible leading-none font-semibold italic text-blue-dark
 
 .resume-employer
   font-size: 120%
   line-height: 1rem
-
+  @apply text-grey-darkest mt-3
 .resume-job-location
   display: none
   font-style: oblique
@@ -85,14 +81,10 @@
   h2
 
   .resume-job-experiences
-
-    // position: relative
-    // left: 3%
+    @apply text-blue-darkest
     li
-      line-height: 1.3rem
-      clear: left
       list-style-type: circle
-
+      @apply leading-normal
 .resume-sidebar
   @apply w-1/3 mr-2 my-3
   p
