--- a/app/views/pages/_team.html.haml
+++ b/app/views/pages/_team.html.haml
@@ -3,16 +3,16 @@
   .section-head
     %h2 Roles I play
     %h3.section-subheading These are some of the roles I play.
-  .flex.flex-row
-    .p-2{:class => "w-1/3 text-center"}
-      = image_tag((asset_pack_path'davechmura_website/images/DavePics/davechmura_aboutme.png'), alt: 'Dave Chmura holding a gaggle of Apple Puck Mice', class: ' rounded-full')
+  .roles.flex.flex-row
+    .p-2
+      = image_tag((asset_pack_path'davechmura_website/images/DavePics/davechmura_aboutme.png'), alt: 'Dave Chmura holding a gaggle of Apple Puck Mice', class: 'shadow-inner rounded-full')
       %h4 Dave Chmura
       %p.text-muted Product Manager
-    .p-2{:class => "w-1/3 text-center"}
+    .p-2
       = image_tag((asset_pack_path'davechmura_website/images/DavePics/davechmura_aboutme.png'), alt: 'Dave Chmura holding a gaggle of Apple Puck Mice', class: ' rounded-full')
       %h4 Dave Chmura
       %p.text-muted Developer
-    .p-2{:class => "w-1/3 text-center"}
+    .p-2
       = image_tag((asset_pack_path'davechmura_website/images/DavePics/davechmura_aboutme.png'), alt: 'Dave Chmura holding a gaggle of Apple Puck Mice', class: 'rounded-full')
       %h4 Dave Chmura
       %p.text-muted Mentor
