--- a/app/views/resume/index.html.haml
+++ b/app/views/resume/index.html.haml
@@ -106,7 +106,7 @@
 
       %h2.resume-employer University of Michigan, College of Literature, Science and the Arts
 
-      %h2.resume-job Systems Architect Intermediate, LSA MIS
+      %h2.resume-job Systems Architect Intermediate, LSATS
       .resume-employment-dates September 2015 - Present
       .resume-job-location Ann Arbor, MI
 
