--- a/app/javascript/davechmura_website/stylesheets/agency.sass
+++ b/app/javascript/davechmura_website/stylesheets/agency.sass
@@ -1,36 +1,17 @@
-@tailwind preflight
-@tailwind components
-@tailwind utilities
-// Background Cover Mixin
+
 @import 'variables'
-@import 'mixins'
-
-// =background-cover
-
 
 .mast-header
   background-image: url("../images/DavePics/hug_70.svg")
-  background-repeat: no-repeat
-  background-attachment: scroll
-  background-position: center center
-  -webkit-background-size: cover
-  -moz-background-size: cover
-  background-size: cover
-  -o-background-size: cover
-  @apply text-center
-  // height: 15%
-
+  @apply text-center rounded-lg bg-scroll bg-center bg-no-repeat bg-cover
   .mast-header-text
     @apply  p-24 text-blue-darker m-12
-
-
 
 .intro-lead-in
   @apply font-sans text-5xl font-bold
 
 .intro-heading
   @apply font-serif text-4xl italic leading-loose text-blue
-  // @apply text-2xl italic
 
 .intro-text
   @apply text-grey-darkest mt-12
@@ -43,10 +24,13 @@
   a
     @apply px-4 py-2 rounded bg-yellow-dark text-2xl text-white
 
-
+.roles
+  @apply text-center
+  img
+    @apply shadow-lg
 // Skills Section
 .skills
-  
+
 .section-head
   @apply text-grey-darkest text-3xl my-8 text-center
   p
@@ -72,26 +56,3 @@
     @apply text-base
     .skill-item
       @apply w-1/3
-
-// END Skills Section
-
-//
-// @media (min-width: 768px)
-//   .mast-header
-//     .mast-header-text
-//       @apply pt-24
-//       // padding-top: 300px
-//       // padding-bottom: 200px
-//
-//       .intro-lead-in
-//         font-style: italic
-//         font-size: 40px
-//         line-height: 40px
-//         margin-bottom: 25px
-//
-//       .intro-heading
-//         @apply font-sans
-//         font-weight: 700
-//         font-size: 75px
-//         line-height: 75px
-//         margin-bottom: 50px
