--- a/app/javascript/davechmura_website/stylesheets/application.sass
+++ b/app/javascript/davechmura_website/stylesheets/application.sass
@@ -15,7 +15,7 @@ img[alt=""] img:not([alt])
 body
   @apply flex flex-col h-full
 .content
-  @apply -my-6 px-6 mx-auto
+  @apply  px-6 py-4 mx-auto -mt-2 
 
 .debug_dump
   grid-column: span 12
