UPDATE: icon on landing page to better align with design

--- a/app/views/pages/_skills.html.haml
+++ b/app/views/pages/_skills.html.haml
@@ -6,7 +6,7 @@
 
   .skill-items
     .skill-item
-      %i.fas.fa-crop
+      %i.fas.fa-drafting-compass
       %h4 Design
       %p By clearly understanding the goals of the project, I design web applications that are designed to accomplish those goals. Careful planning improves the effectiveness of the application while minimizing the cost of revisions as new enhancements are added in the future.
 
