--- a/app/views/resume/_activities.html.haml
+++ b/app/views/resume/_activities.html.haml
@@ -1,11 +1,11 @@
-%h2 Activities
+%h3 Activities
 %ul
   %li
     %i.fas.fa-skiing
     Skiing
   %li
     %i.fas.fa-guitar
-    Playing guitar - writing the occasional song
+    Playing guitar - song writing
   %li
     %i.fas.fa-dog
     Hanging with and training our pets
