--- a/app/views/resume/_skills.html.haml
+++ b/app/views/resume/_skills.html.haml
@@ -1,11 +1,14 @@
 %h2 Skills
 %ul
   %li
+    %i.fas.fa-hands-helping
     %b LEADERSHIP:
-    Training, Mentoring, Hiring and Managing Developers, Product Management, Product Vision, Consulting, Interpersonal Communication, Facilitation,  Client Management, Community Building, Fostering Collaboration
+    %p Training, Mentoring, Hiring and Managing Developers, Product Management, Product Vision, Consulting, Interpersonal Communication, Facilitation,  Client Management, Community Building, Fostering Collaboration
   %li
+    %i.fas.fa-code-branch
     %b TECHNICAL:
     Ruby, Javascript (jquery), SQL / PostgreSQL / MySQL, Ruby on Rails, HAML/HTML5/ERB, SASS / CSS, Bootstrap / Bourbon, RSpec / Capybara, Git / Github / Bitbucket,  Sketch, Omnigraffle, Adobe Creative Suite, xcode
   %li
+    %i.fab.fa-black-tie
     %b BUSINESS:
     Product Marketing, Product Roadmaps, Market Research, Competitive Analysis, Customer Support, Technical Documentation, Lead Generation,  Requirements Gathering
