REFACTOR: clean up formatting

--- a/app/javascript/davechmura_website/stylesheets/_header.sass
+++ b/app/javascript/davechmura_website/stylesheets/_header.sass
@@ -1,6 +1,6 @@
 header
   min-height: 3.5rem
-  @apply bg-grey-darker flex flex-wrap items-center justify-center h-auto
+  @apply bg-grey-darker flex flex-wrap items-center justify-center h-auto w-screen
   a
     @apply text-blue-lightest font-sans no-underline text-xl
   a:hover
